<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">对讲机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_close_device">断开连接</string>
    <string name="action_connect_device">连接设备</string>
    <string name="searching_bluetooth">正在搜索设备&#8230;.</string>
    <string name="cancel_discovery">取消搜索</string>
    <string name="start_search">搜索设备</string>
    <string name="open_bluetooth">开启蓝牙</string>
    <string name="look_devices">连接设备</string>
    <string name="record_sound">开始录音</string>
    <string name="recording_sound">录音中&#8230;,点击停止</string>
    <string name="receiving_sounds">正在接收&#8230;</string>
    <string name="play_sounds">播放录音</string>
    <string name="stop_sounds">停止播放</string>
    <string name="sounds_im">实时聊天中&#8230;</string>
    <string name="send">发送</string>
    <string name="clear">清空</string>
    <string name="reset_scm">复位</string>
    <string name="receive_counts">已接收 %d 字节</string>
    <string name="send_counts">已发送 %d 字节</string>
    <string name="channel_1">频道1</string>
    <string name="channel_2">频道2</string>
    <string name="channel_3">频道3</string>
    <string name="channel_4">频道4</string>

    <string name="connected">已连接%1s</string>
    <string name="disconnected">连接丢失</string>
    <string name="title_devices">搜索BLE设备</string>
    <string name="not_connect_device">还未连接设备</string>
    <string name="not_support_ble">设备不支持BLE</string>
    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描设备</string>
    <string name="menu_stop">停止扫描</string>
    <string name="menu_record">录音</string>
    <string name="menu_stop_record">停止录音</string>
    <string name="choose_devices">选择设备</string>
    <string name="device_bluetooth_not_support">设备不支持蓝牙</string>
    <string name="bluetooth_none_connection">无连接</string>
    <string name="bluetooth_listening">正在监听&#8230;</string>
    <string name="bluetooth_connecting">正在连接&#8230;</string>
    <string name="bluetooth_connected">已连接设备</string>
    <string name="received_error_packet">接收到错误数据</string>
    <string name="choose_channel">选择频道</string>
    <string name="bluetooth_closed">蓝牙已关闭</string>
    <string name="scan_bluetooth_device">查找蓝牙设备</string>
    <string name="channel_label">当前频道：%1s</string>
    <string name="style_label">当前RSSI值：%1d</string>
    <string name="blue_sytle_normal">普通蓝牙</string>
    <string name="blue_sytle_ble">BLE</string>
    <string name="send_failed">发送失败</string>
    <string name="starting_bluetooth">正在开启蓝牙&#8230;</string>
    <string name="unknown_device">未知设备</string>
    <string name="cannot_send">接收中或未连接设备，不能发送！</string>
    <string name="create_group">建组</string>
    <string name="add_group">加组</string>
    <string name="async_work">同步字</string>
    <string name="reset_rssi">Rssi</string>
    <string name="channel_state">信道状态</string>
    <string name="sure">确定</string>
    <string name="hint_et_nickname">请输入昵称</string>
    <string name="all_pictures">所有图片</string>
    <string name="bind_device">绑定设备</string>
    <string name="hint_et_pass">请输入密码</string>
    <string name="interphone">对讲机</string>
    <string name="contacts">通讯录</string>
    <string name="my_device">我的设备</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="hint_et_group_name">请输入组名称</string>
    <string name="wait_gruop_member_in">等待成员加入</string>
    <string name="tip_member_in">请小伙伴们打开加组，选择“%1s”加入</string>
    <string name="cancel">取消</string>
    <string name="search_nearby_group">搜索身边小组</string>
    <string name="choose_group_in">点击小组加入</string>
    <string name="wait_group_owner_sure">等待群主确认</string>
    <string name="hint_et_sent_text">请写一段消息</string>
    <string name="connection_lose">连接已丢失，点击重新连接</string>
    <string name="reconnecting">正在重新连接，请稍候</string>
    <string name="connect_success">连接成功</string>
    <string name="mute">静音</string>
    <string name="cancel_mute">解除静音</string>
    <string name="see_group">查看组</string>
    <string name="find_mydevice">查找我的设备</string>
    <string name="device_version">固定版本</string>
    <string name="unbind_device">解除绑定</string>

</resources>
