<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_connect_device" android:title="@string/action_connect_device"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_close_device" android:title="@string/action_close_device"
        android:orderInCategory="200" app:showAsAction="never" />

    <item android:id="@+id/action_clear" android:title="@string/clear"
        android:orderInCategory="300" app:showAsAction="never" />

    <item android:id="@+id/action_reset_scm" android:title="@string/reset_scm"
        android:orderInCategory="400" app:showAsAction="never" />

    <item android:id="@+id/action_channel_1" android:title="@string/channel_1"
        android:orderInCategory="500" app:showAsAction="never" />

    <item android:id="@+id/action_channel_2" android:title="@string/channel_2"
        android:orderInCategory="600" app:showAsAction="never" />

    <item android:id="@+id/action_channel_3" android:title="@string/channel_3"
        android:orderInCategory="700" app:showAsAction="never" />

    <item android:id="@+id/action_channel_4" android:title="@string/channel_4"
        android:orderInCategory="800" app:showAsAction="never" />

</menu>
