<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_without_press">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_top_raw_group"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/wait_gruop_member_in"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@color/blue_with_press"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:id="@+id/tv_tip_info_raw_group"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tip_info_raw_group"
        android:layout_alignBottom="@+id/img_photo_raw_group"
        android:layout_marginBottom="40dp"
        android:background="@color/blue_without_press"
        android:id="@+id/member_layout"/>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="#90232112"
        android:layout_alignTop="@+id/member_layout"
        android:layout_marginTop="50dp"
        android:numColumns="3"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:id="@+id/grid_members_raw"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/img_group_owner"
        android:layout_alignTop="@+id/grid_members_raw"
        android:layout_alignStart="@+id/grid_members_raw"
        android:layout_marginTop="-30dp"
        android:layout_marginStart="-30dp"
        />

    <com.rftransceiver.customviews.ArcView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/arcview1"
        custom:stroke_color="#fff"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_sure_raw_group"
        android:layout_marginBottom="10dp"
        />

    <com.rftransceiver.customviews.ArcView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/arcview2"
        custom:stroke_color="#fff"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_sure_raw_group"
        android:layout_marginBottom="10dp"
        />

    <com.rftransceiver.customviews.ArcView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/arcview3"
        custom:stroke_color="#fff"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_sure_raw_group"
        android:layout_marginBottom="10dp"
        />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/img_photo_raw_group"
        android:layout_above="@+id/btn_sure_raw_group"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        />
    
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/btn_sure_raw_group"
        android:background="@drawable/tv_sure"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/sure"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_cancel_raw_group"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/btn_cancel_raw_group"
        android:background="@drawable/tv_cancel"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        />
    

</RelativeLayout>